@@ -1,3 +1,6 @@
+USER VISIBLE CHANGES BETWEEN ACE-6.1.5 and ACE-6.1.6
+====================================================
+
 USER VISIBLE CHANGES BETWEEN ACE-6.1.4 and ACE-6.1.5
 ====================================================
 
